--- a/index.html
+++ b/index.html
@@ -7,16 +7,24 @@
   <title>GTasks Canvas</title>
   <meta name="description" content="The GTasks Webapp Canvas">
   <meta name="author" content="xz9">
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <div class="header">
+    <div class="leftbar">
+      New List
+    </div>
+    <div class="rightbar">
+      <div class="heading">TODO List</div>
+    </div>
   </div>
   <div class="viewer">
     <div class="leftbar">
+      <b>Task Lists:</b>
     </div>
     <div class="rightbar">
+      def
     </div>
   </div>
   <script src="js/scripts.js"></script>
