--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
 <body>
   <div class="header">
     <div class="leftbar">
-      New List
+      <button id="newlist" class="newlist"> New List</button>
     </div>
     <div class="rightbar">
       <div class="heading">TODO List</div>
     </div>
   </div>
   <div class="viewer">
-    <div class="leftbar">
-      <b>Task Lists:</b>
+    <div class="downrightbar">
+      <div class="menubar"> aaa </div>
+      <div class="content"> bbb </div>
     </div>
-    <div class="rightbar">
-      def
+    <div class="downleftbar">
+      <b class="listheading">Task Lists:</b>
     </div>
   </div>
   <script src="js/scripts.js"></script>
