Added tasks and items.

--- a/index.html
+++ b/index.html
@@ -20,13 +20,32 @@
     </div>
   </div>
   <div class="viewer">
-    <div class="downrightbar">
-      <div class="menubar"> aaa </div>
-      <div class="content"> bbb </div>
-    </div>
     <div class="downleftbar">
       <b class="listheading">Task Lists:</b>
+      <br>
+      Task 1
+      <br>
+      Task 2
     </div>
+    <div class="downrightbar">
+      <div class="menubar"> 
+        <button>Add Item</button>
+        <button>Up</button>
+        <button>Down</button>
+        <button>Left</button>
+        <button>Right</button>
+      </div>
+      <div class="content">
+        Item 1
+        <br>
+        Item 2
+        <br>
+        Item 3
+        <br>
+        Item 4
+      </div>
+    </div>
+
   </div>
   <script src="js/scripts.js"></script>
 </body>
