Added row styles.

--- a/index.html
+++ b/index.html
@@ -36,13 +36,12 @@
         <button>Right</button>
       </div>
       <div class="content">
-        Item 1
-        <br>
-        Item 2
-        <br>
-        Item 3
-        <br>
-        Item 4
+        <div layout="row">
+          <div class="rowwrapper">
+          <label class="rowhandle"> <input type="checkbox"> </input> </label>
+          <input type="text" class="tasktext"></input>
+          </div>
+        </div>
       </div>
     </div>
 
