Added mouse focus.

--- a/index.html
+++ b/index.html
@@ -37,10 +37,18 @@
       </div>
       <div class="content">
         <div layout="row">
-          <div class="rowwrapper">
-          <label class="rowhandle"> <input type="checkbox"> </input> </label>
+          <div class="rowwrapper focus">
+          <label class="rowhandle"> <input type="checkbox" class="rowchecker"> </input> </label>
           <input type="text" class="tasktext"></input>
           </div>
+          <div class="rowwrapper">
+          <label class="rowhandle"> <input type="checkbox" class="rowchecker"> </input> </label>
+          <input type="text" class="tasktext"></input>
+          </div>         
+          <div class="rowwrapper">
+          <label class="rowhandle"> <input type="checkbox" class="rowchecker"> </input> </label>
+          <input type="text" class="tasktext jobdone"></input>
+          </div> 
         </div>
       </div>
     </div>
