--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
       <button id="newlist" class="newlist"> New List</button>
     </div>
     <div class="rightbar">
-      <div class="heading">TODO List</div>
+      <div class="heading">Todo List</div>
     </div>
   </div>
   <div class="viewer">
     <div class="downleftbar">
       <b class="listheading">Task Lists:</b>
       <br>
-      Task 1
+      Todo List
       <br>
       Task 2
     </div>
     <div class="downrightbar">
       <div class="menubar"> 
-        <button>Add Item</button>
-        <button>Up</button>
-        <button>Down</button>
-        <button>Left</button>
-        <button>Right</button>
+        <button id="newitem">Add Item</button>
+        <button id="moveup">Up</button>
+        <button id="movedown">Down</button>
+        <button id="moveleft">Left</button>
+        <button id="moveright">Right</button>
       </div>
       <div class="content">
-        <div layout="row">
+        <div class="taskrows" layout="row">
           <div class="rowwrapper focus">
           <label class="rowhandle"> <input type="checkbox" class="rowchecker"> </input> </label>
           <input type="text" class="tasktext"></input>
